# simple-async-api

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  validators.py
api/: files.py  status.py
postgres_data/: postmaster.opts  postmaster.pid
postgres_data/base/13445/: pg_internal.init
postgres_data/global/: pg_control  pg_internal.init
postgres_data/pg_stat_tmp/: db_0.stat  db_13445.stat  global.stat
