[tool.poetry]
name = "simple-api"
version = "0.1.0"
description = "Async service for download images from https://loremflickr.com"
authors = ["NeverEverLive <nevereverlives@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_api"}]

[tool.poetry.dependencies]
python = "3.10.0"
aiofiles = "22.1.0"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.1.0"
charset-normalizer = "2.1.1"
frozenlist = "1.3.3"
idna = "3.4"
multidict = "6.0.2"
python-dotenv = "0.21.0"
yarl = "1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
